Bugzilla bug 219913: define _PR_HAVE_THREADSAFE_GETHOST for OS/2 so that we can issue concurrent gethostbyname calls.  Moved the definition of _PR_GLOBAL_THREADS_ONLY, BSD_SELECT, and TCPV40HDRS from configure.in to _os2.h. Modified files: configure configure.in _os2.h